Switch to using Path.of instead and additional tests